# LambdaLambda

./: .gitignore  CMakeLists.txt  README.md  test.py
include/: LLKine.h  PodioReader.h  acceptReject.h  detector.h  driver.h  event.h  fcn.h  fitter.h  reader.h  rndm.h
logs/: simfit.txt  simfit_m1.txt  simfit_m4.txt
py/: .directory  cmsPlots.py  compareDrivers.py  driver.py  driver2.py  errorCalc.py  fitresults.txt  fitter.py  fullfit.py  logfit.txt  plotter.py  processFitRes.py  reader.py  runfit.py  runreader.py  ssidefit.py  upolfit.py
py/dataio/: dataio.py
py/draw/: asym.py  bias.py  corrmtx.py  hmap.py  plotPhi.py  plotter.py  precision.py
py/fit/: constrainedfit.py  fitter.py  simfit.py
py/lib/: ahel_stat.py  beamfield.py  bhabha.py  driver.py  efficiency.py  fbasym.py  fitresreader.py  fitter.py  fullfit.py  fullfiteff.py  hmap.py  lambda_kine.py  lrasym.py  pars.py  pdfs.py  reader.py  uncert.py  upolfit.py
py/misc/: compareDrivers.py
src/: LLKine.cpp  PodioReader.cpp  acceptReject.cpp  driver.cpp  event.cpp  fcn.cpp  fitter.cpp  main.cpp  reader.cpp  rndm.cpp
